# diagram-engine

./: CONTRIBUTING.md  LICENSE  README.md  SKILL.md  pyproject.toml
engine/: excalidraw_export.py  layout_engine.py  render_excalidraw.py  section_inspector.py
examples/: complex-workflow.excalidraw  engine-architecture.excalidraw  engine-pipeline.excalidraw  layered-stack.excalidraw  linkedin-portrait.excalidraw  side-by-side.excalidraw  validation-loop.excalidraw  without-vs-with.excalidraw
patterns/: complex-workflow.py  layered-stack.py  linkedin-portrait.py  side-by-side.py
references/: arrow-patterns.md  color-palette.md  element-templates.md  visual-references.md
